CR-2009-03-03-1: Bugfix:     fixed tests to support 60 version tests
                             (qhost, qresub, execd reconnect, scheduler
                              reconnect)
                 Review:     RD

CR-2009-03-03-0: Enhancem.:  o new test for IZ #505
                 Issue:      288
                             o shutdown_core_system(): also look for core 
                               files in product root (SGE_ROOT) directory
                             o check_for_core_files(): new optional parameter
                               for deleteing core files if found
                             o new procedure: startup_execd_with_fd_limit()
                             o new procedure: get_FD_SETSIZE_for_host()
                               (requires update of test module binaries)
                             o new procedure: get_shell_fd_limit_for_host()
                 Review:     DG

RH-2009-03-02-0: Bugfix:     Hedeby: adjustments issue 618
                 Review:     RM

CR-2009-03-02-1: Bugfix:     fixed test for IZ 2895 for GE 60 versions
                 Review:     RD

CR-2009-03-02-0: Enhancem.:  enhanced test for IZ 2895
                 Review:     RD

RD-2009-02-26-0: Bugfix:     enhanced consumables_resources test
                 Review:     CR

RH-2009-02-25-0: Bugfix:     Hedeby: mpjslo_parallel_and_array_job failed if after
                             the resource movement the resource request quantity was 
                             not immediately correct.
                             Implemented a cylce which polls the resource request.
                 Review:     AF

JG-2009-02-20-0: Enhancem.:  new menu item 34 cleaning all hosts known in the
                             testsuite host configuration (kills SGE daemons,
                             cleans /var/sgeCA, local spool directories ...)
                 Review:     RD

CR-2009-02-19-1: Enhancem.:  added more logging output for qsub test